--- a/src/input.css
+++ b/src/input.css
@@ -41,3 +41,24 @@
     fill: white;
 }
 
+.circle{
+    height: 20px;
+    width: 20px;
+    border-radius: 0 50% 50% 50%;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    pointer-events: none;
+    opacity: 0;
+}
+body:hover .circle{
+    opacity: 1;
+}
+a{
+    cursor: none;
+}
+a:hover .circle{
+    opacity: 0.1;
+}
